Fix navbar layout on mobile

--- a/src/Mealmap.Api/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/src/Mealmap.Api/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,6 +2,7 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  margin-right: 10vw;
 }
 
 html {
